kubernetes/storyteller/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: storyteller

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: storyteller
    app.kubernetes.io/instance: storyteller
  ports:
  - name: http
    port: 8001
    targetPort: http
    protocol: TCP
