kubernetes/storyteller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: storyteller
  annotations:
    ak-type: oidc
    ak-oidc-callback: /api/v2/auth/callback/authentik
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Storyteller
    gethomepage.dev/description: Immersive Ebook and Audiobook Reading
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-book-open-page-variant
    gethomepage.dev/pod-selector: app.kubernetes.io/name=storyteller

spec:
  tls:
  - hosts:
    - storyteller.k.oneill.net
    secretName: storyteller-tls
  rules:
  - host: storyteller.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storyteller
            port:
              number: 8001
